--- a/Clinica/appsettings.json
+++ b/Clinica/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dbKey": "Data Source=.;Initial Catalog=DBMVCclinica;Integrated Security=True"
+
+    "dbKey": "Data Source=.\\sqlexpress02;Initial Catalog=DBMVCclinica;Integrated Security=True"
   }
 }
