--- a/Clinica/appsettings.json
+++ b/Clinica/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "dbKey": "Data Source=.\\sqlexpress02;Initial Catalog=DBMVCclinica;Integrated Security=True"
+    "dbKey": "Data Source=.;Initial Catalog=DBMVCclinica;Integrated Security=True"
   }
 }
